2004-06-18  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/graphics.py: Added support for combined PDF/LaTeX.
	Ignore file names that contain \ and #.

	* src/modules/epsfig.py: Fixed the translation into \inclugraphics
	style arguments.

	* src/__init__.py: Check for program availability in execute().

2004-06-15  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Added support for \includeonly.

	* src/modules/bibtex.py: Added a check for defined citations.

	* src/__init__.py: Added delayed directives, to improve the semantic
	of directives in sources.

	* src/__init__.py, src/util.py: Fixed the rules to check if compiling
	is required.

2004-06-09  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/makeidx.py, src/modules/index.py: Added support for
	module "index", modified "makeidx" to factor the code.

2004-05-14  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, src/modules/...: Added support for e-TeX and Omega.

	* src/__init__.py: Corrected input_file to ignore names that contain
	the characters \ and #.

	* src/modules/bibtex.py: Refined dependency handling.

2004-05-04  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Added directive "onchange".

2004-03-17  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py, src/util.py: Added a method Depend.show_errors.

	* src/graphics/mpost.py: Moved error reporting to the right place.

	* src/cmdline.py, src/cmd_pipe.py: Write all messages on stderr.

2004-03-06  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Portability improvement.

	* src/__init__.py, src/util.py: Fixed the plug-in loading.

2004-02-20  Emmanuel Beffara  <manu@beffara.org>

	* Version 0.99.7 released.

	* rubber.spec.in: RPM packaging update.

	* src/modules/epsfig.py: Added hooks for \epfbox and \epsffile.

2004-02-19  Emmanuel Beffara  <manu@beffara.org>

	* src/cmdline.py, src/cmd_info.py: Added info action --rules, allowed
	any rubber option in rubber-info.
