@@ -1,3 +1,8 @@
+2004-07-25  Emmanuel Beffara  <manu@beffara.org>
+
+	* src/__init__.py, src/cmdline.py, src/util.py, src/modules/bibtex.py:
+	Improved the way errors are localized in the sources.
+
 2004-06-18  Emmanuel Beffara  <manu@beffara.org>
 
 	* src/modules/graphics.py: Added support for combined PDF/LaTeX.
